# Transformo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment-dev.yml  environment.yml  helmert.py  notes.md  poc.py  pyproject.toml  setup.cfg
.github/workflows/: testsuite.yml
examples/: bells_and_whistles.yaml  bernese_crd_files.yaml  datasource_overrides.yaml  dummy_example.yaml  multiple_datasources.yaml  multiple_transformation_steps.yaml  present_coordinates.yaml  process_commands.yaml
src/cli/: __init__.py  entries.py  style.css
src/transformo/: __init__.py  _typing.py  core.py  datasources.py  datatypes.py  estimators.py  operators.py  pipeline.py  presenters.py  protocols.py  transformer.py  typing.py  writers.py
src/transformo/datasources/: __init__.py  bernese.py  csv.py
src/transformo/operators/: __init__.py  helmert.py  proj.py
src/transformo/presenters/: __init__.py  coordinates.py  datasources.py  proj.py
test/: conftest.py  notes.md  test_datasources.py  test_datastructures.py  test_datatypes.py  test_estimators.py  test_operators.py  test_pipeline.py  test_presenters.py  test_transformer.py
test/data/: dk_bernese52.CRD  dk_bernese54.CRD  dk_cors_etrs89.csv  dk_cors_itrf2014.csv  gnet_gr96_2013.csv
test/datasources/: test_bernese.py  test_csv.py  test_datasource.py
test/operators/: test_helmert.py  test_operator.py
test/presenters/: test_coordinates.py  test_datasources.py  test_presenter.py  test_proj.py
