[metadata]
name = transformo
version = 0.1.0
description = Transformo - The general purpose tool for determining geodetic transformations
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/kbevers/transformo
author = Kristian Evers
author_email = kreve@kds.dk
license = MIT
license_file = LICENSE
project_urls =
    Documentation = https://github.com/kbevers/transformo
    Source = https://github.com/kbevers/transformo
    Tracker = https://github.com/kbevers/transformo/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
platforms = any
python_requires = >=3.10
install_requires =
    numpy>=2.0
    pydantic>=2.8

[options.entry_points]
console_scripts =
    transformo = cli.entries:main

[options.packages.find]
where = src

[options.package_data]
cli =
    style.css
